@@ -1,3 +1,7 @@
+Thu Jun  10  14:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgamelist.c, gnubg.gtkrc: Multiple styles and new defaults for game list
+
 Wed Jun  9  14:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gnubg.c, gtkgamelist.c, gnubg.gtkrc: Get game list colours from gtkrc file
